# sxfiler

./: .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .ocamlformat  .ocamlformat-ignore  .prettierrc.js  Dockerfile.alpine  Dockerfile.debian  Makefile  README.md  aliaslifyConfig.js  dune  esdoc.json  gulpfile.es6  gulpfile.js  karma.conf.js  package-lock.json  package.json  sxfiler-windows.opam  sxfiler.opam  tsconfig.json  tsconfig.test.json  tsd.json  tslint.json  typedoc.json  webpack.dll.config.js  webpack.main.config.js  webpack.test.config.js
src/ocaml/: dune  jbuild  sxfiler_main_entry.ml  sxfiler_renderer_entry.ml  sxfiler_renderer_main.ml
src/ocaml/common/: callable_action.ml  common_config.ml  common_event.ml  common_intf.ml  common_key_bindable_action.ml  common_key_map.ml  common_key_map.mli  common_message.ml  common_message_payload.ml  common_pane_history.ml  common_pane_history.mli  common_state.ml  common_task_intf.ml  common_types.ml  common_util.ml  completer_state.ml  config.ml  jbuild  key_map.ml  key_map.mli  message_payload.ml  root_state.ml  server_state.ml  std.ml  sxfiler_common.ml  sxfiler_constants.ml  sxfiler_event.ml  sxfiler_ffi.ml  sxfiler_message.ml  sxfiler_state.ml  sxfiler_types.ml  sxfiler_util.ml
src/ocaml/completer/: candidates_intf.ml  completer.ml  completer.mli  jbuild
src/ocaml/completion/: completer.ml  completer.mli  completer_intf.ml  domain.ml  dune  jbuild  repository.ml  usecase.ml  usecase.mli  usecase_intf.ml
src/ocaml/core/: comparable.ml  comparable.mli  dune  error.ml  error.mli  file.ml  file.mli  fun.ml  fun.mli  int64.ml  int64.mli  jbuild  monad.ml  monad.mli  monad_intf.ml  option.ml  path.ml  path.mli  result.ml  string.ml  sxfiler_core.ml  system.ml  time.ml  time.mli  time_lexer.mll  time_parser.mly  time_rfc3339_syntax.ml  tuple.ml
src/ocaml/dependency/: dune  provider.ml  provider.mli  sxfiler_dependency.ml
src/ocaml/domain/: bookmark.ml  bookmark.mli  bookmark_repository.ml  bookmarks.ml  bookmarks.mli  common.ml  common.mli  completer.ml  completer.mli  completion.ml  condition.ml  condition.mli  configuration.ml  configuration.mli  configuration_store.ml  configuration_store.mli  context.ml  context.mli  dune  executor_intf.ml  file_item.ml  file_item.mli  file_item_order.ml  file_item_order.mli  file_list.ml  file_list.mli  file_stat.ml  file_stat.mli  file_tree.ml  file_window.ml  file_window.mli  filer.ml  filer.mli  filer_intf.ml  id_generator.ml  id_generator_intf.ml  interaction.ml  interaction.mli  item_replication_service.ml  item_transporter_service.ml  (+35 more)
src/ocaml/infrastructure/: dune  file_list_step.ml  file_list_step.mli  filer_step.ml  filer_step.mli  forward_match_completer.ml  forward_match_completer.mli  keymap_file.ml  keymap_file.mli  keymap_step.ml  keymap_step.mli  logger.ml  migemo_completer.ml  migemo_completer.mli  statable.ml  sxfiler_infrastructure.ml  theme_step.ml  theme_step.mli  ws_abbrev.ml  ws_actor.ml  ws_actor.mli  ws_actor_intf.ml  ws_connection.ml  ws_connection.mli  ws_connection_intf.ml
src/ocaml/kbd/: dune  jbuild  sxfiler_kbd.ml  sxfiler_kbd.mli
src/ocaml/main/: action.ml  config.ml  config_loader.ml  errors.ml  file_list.ml  flux_runner.ml  ipc_handler.ml  jbuild  key_map.ml  key_map.mli  main_process.ml  main_state.ml  message_reaction.ml  modules.ml  predefined_tasks.ml  sxfiler_action.ml  sxfiler_config.ml  sxfiler_file_list.ml  sxfiler_flux_runner.ml  sxfiler_ipc.ml  sxfiler_ipc_handler.ml  sxfiler_key_handler.ml  sxfiler_key_handler.mli  sxfiler_key_map.ml  sxfiler_key_map.mli  sxfiler_main.ml  sxfiler_main_process.ml  sxfiler_main_state.ml  sxfiler_message_reaction.ml  sxfiler_modules.ml  user_data.ml  window_binder.ml
src/ocaml/renderer/: action_creator.ml  action_creator.mli  action_mapper.ml  action_mapper.mli  api.ml  c_command_completer.ml  c_command_pallet.ml  c_completer.ml  c_completer_wrapper.ml  c_completion_list.ml  c_completion_result.ml  c_confirmation_dialog.ml  c_confirmation_dialog.mli  c_copy_confirmation_dialog.ml  c_dialog_base.ml  c_dialog_base.mli  c_dialog_container.ml  c_dialog_container.mli  c_file_completion_dialog.ml  c_file_completion_list.ml  c_file_item.ml  c_file_list.ml  c_file_list_pane.ml  c_file_list_pane_header.ml  c_file_list_viewer.ml  c_file_list_viewer_header.ml  c_file_mode.ml  c_file_name.ml  c_file_size.ml  c_file_timestamp.ml  c_history_dialog.ml  c_jump_dialog.ml  c_key_container.ml  c_key_handler.ml  c_layout.ml  c_main.ml  c_mode_manager.ml  c_name_input_dialog.ml  c_notification.ml  c_notifier.ml  (+95 more)
src/ocaml/rpc/: abbrev.ml  client.ml  client.mli  client_command.ml  client_command.mli  client_intf.ml  command.ml  completer_endpoint.ml  completer_endpoint.mli  completion.ml  configuration.ml  configuration_endpoint.ml  configuration_endpoint.mli  dune  endpoint.ml  endpoint.mli  endpoint_error.ml  endpoint_error.mli  endpoints.ml  errors.ml  event_handler.ml  event_handler.mli  file.ml  filer_endpoint.ml  filer_endpoint.mli  interaction_mediator.ml  interaction_mediator.mli  interaction_mediator_intf.ml  jbuild  keybindings.ml  keymap.ml  (+12 more)
test/renderer/: IpcStub.js  RendererIPC_test.js  action-stream_test.js  createIpc.js  dune  jbuild  p_file_mode_test.ml  p_file_name_test.ml  p_file_size_test.ml  p_file_timestamp_test.ml  p_node_plan_operation_test.ml  renderer-ipc_test.js  test_c_file_mode.ml  test_c_file_name.ml  test_c_file_size.ml  test_p_file_mode.ml  test_p_file_name.ml  test_p_file_size.ml  test_sxfiler_renderer.ml  tests.ml
test/server/: dune  jbuild  proc_completion_test.ml  proc_configuration_test.ml  proc_filer_test.ml  procedure_test.ml  test.proto  test_sxfiler_server.ml  tests.ml
test/server_lib/: dune  dune.gen  dune.inc  jbuild  proc_completion.ml  proc_completion_test.ml  proc_configuration.ml  proc_configuration_test.ml  proc_filer.ml  proc_filer_test.ml  proc_keybindings.ml  proc_keymap.ml  proc_keymap_test.ml  proc_scanner.ml  rpc_connection.ml  rpc_connection_test.ml  scanner_op.ml  task.ml  task_result_handler.ml  test_sxfiler_server.ml  tests.ml  workspace_op.ml
(+2121 files in other folders)
