
opam-version: "2.0"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
synopsis: "Simple and extensible filer"
homepage: "https://github.com/derui/sxfiler"
bug-reports: "https://github.com/derui/sxfiler"
dev-repo: "git+https://github.com/derui/sxfiler"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {>= "2.0.0"}
  "ppx_protocol_conv_json-windows" {>= "5.0"}
  "ppx_fields_conv-windows" {build & >= "v0.11.0"}
  "ppx_let-windows" {build & >= "v0.12.0"}
  "fieldslib-windows" { >= "v0.11.0"}
  "ppx_deriving-windows" {>= "4.2.1"}
  "lwt-windows" {>= "4.0.0"}
  "lwt_ppx-windows" {build}
  "cohttp-lwt-unix-windows"
  "websocket-lwt-unix-windows"
  "conduit-lwt-unix-windows"
  "re-windows" { >= "1.7.3"}
  "uuidm-windows" { >= "0.9.6"}
  "alcotest-windows" {< "1.0.0" & with-test}
  "alcotest-lwt-windows" {< "1.0.0" & with-test}
  "bisect_ppx" {>= "1.3.3" & with-test}
  "logs-windows" {>= "0.6.2"}
  "fmt-windows" {>= "0.8.5"}
  "ocaml-protoc-plugin-windows" {>= "2.0.0"}
  "ppx_sexp_conv" {with-test}
  "jsonrpc-ocaml-windows"
  "migemocaml-windows"
]
available: ["ocaml" >= "4.05.0"]
