
opam-version: "2.0"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
synopsis: "Simple and extensible filer"
homepage: "https://github.com/derui/sxfiler"
bug-reports: "https://github.com/derui/sxfiler"
dev-repo: "git+https://github.com/derui/sxfiler"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build & >= "1.0.0"}
  "ppx_variants_conv" {build & >= "v0.9.0"}
  "ppx_protocol_conv_json" {build & >= "5.0"}
  "ppx_fields_conv" {build & >= "v0.11.0"}
  "fieldslib" { >= "v0.11.0"}
  "ppx_deriving" {>= "4.2.1"}
  "ppx_import" {>= "1.6"}
  "lwt" {>= "4.0.0"}
  "lwt_ppx" {build}
  "cohttp-lwt-unix"
  "websocket-lwt-unix"
  "conduit-lwt-unix"
  "re" { >= "1.7.3"}
  "uuidm" { >= "0.9.6"}
  "alcotest" {>= "0.8.3" & with-test}
  "alcotest-lwt" {>= "0.8.0" & with-test}
  "bisect_ppx" {>= "1.3.3" & with-test}
  "logs" {>= "0.6.2"}
  "fmt" {>= "0.8.5"}
  "ppx_sexp_conv" {with-test}
  "jsonrpc-ocaml"
  "migemocaml"
]
available: ["ocaml" >= "4.05.0"]
