
opam-version: "2.0"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
synopsis: "Simple and extensible filer"
homepage: "https://github.com/derui/sxfiler"
bug-reports: "https://github.com/derui/sxfiler"
dev-repo: "git+https://github.com/derui/sxfiler"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { < "3.0.0"}
  "ppx_protocol_conv_json" { < "6.0"}
  "ppx_let" {build & < "v0.14.0"}
  "ppx_deriving" {>= "4.2.1"}
  "lwt" {< "6.0.0"}
  "lwt_ppx" {build}
  "cohttp-lwt-unix"
  "websocket-lwt-unix"
  "conduit-lwt-unix"
  "re" { >= "1.7.3"}
  "uuidm" { >= "0.9.6"}
  "alcotest" {< "1.0.0" & with-test}
  "alcotest-lwt" {< "1.0.0" & with-test}
  "bisect_ppx" {>= "1.3.3" & with-test}
  "logs" {>= "0.6.2"}
  "fmt" {>= "0.8.5"}
  "ocaml-protoc-plugin" {< "4.0.0"}
  "ppx_sexp_conv" {with-test}
  "jsonrpc-ocaml"
  "migemocaml"
]
available: ["ocaml" >= "4.05.0"]
