(alias
 (name js)
 (deps sxfiler_renderer_entry.bc.js))

(executable
 (name sxfiler_renderer_entry)
 (modules sxfiler_renderer_entry)
 (modes byte)
 (libraries logs.browser sxfiler.renderer
  sxfiler.renderer.command js_of_ocaml-lwt
  sxfiler.renderer.background)
 (js_of_ocaml (flags "--pretty"))
 (preprocess (pps lwt.ppx js_of_ocaml-ppx)))
