(alias
 (name runtest)
 (deps tests.bc.js))

(library
 (name test_sxfiler_renderer)
 (libraries js_of_ocaml sxfiler.renderer jsoo_reactjs mocha_of_ocaml snap-shot-it_of_ocaml)
 (modules (:standard \ tests))
 (js_of_ocaml (flags ("--pretty" "--source-map-inline")))
 (preprocess (pps js_of_ocaml-ppx)))

(executable
 (name tests)
 (modules tests)
 (libraries test_sxfiler_renderer)
 (js_of_ocaml (flags ("--pretty" "--source-map-inline"))))
