(test
 (name tests)
 (libraries alcotest alcotest-lwt sxfiler_server spy ppx_protocol_conv_json)
 (preprocess (pps lwt_ppx ppx_protocol_conv)))

(rule
 (targets test.ml)
 (deps
  (:proto test.proto))
 (action
  (run protoc -I .
       "--ocaml_opt=annot=[@@deriving protocol ~driver:(module Protocol_conv_json.Json)]"
       "--ocaml_out=."
       %{proto})))