(alias
 (name runtest)
 (deps test_sxfiler_server.exe)
 (action (run %{deps})))

(executable
 (name test_sxfiler_server)
 (flags (-safe-string))
 (libraries alcotest alcotest-lwt
            lwt
            sxfiler.server.task
            sxfiler.server.core
            sxfiler.server
            sxfiler.core
            sxfiler.rpc.yojson)
 (preprocess (pps lwt_ppx)))
