(library
 (name sxfiler_renderer)
 (public_name sxfiler.renderer)
 (modes byte)
 (libraries js_of_ocaml
            js_of_ocaml-lwt
            js_of_ocaml.weak
            jsoo_reactjs
            jsonrpc-ocaml.jsoo
            lwt
            logs.browser
            sxfiler.core
            sxfiler.renderer.core
            sxfiler.renderer.behavior
            sxfiler.virtualized_list
            sxfiler.domain sxfiler.domain.jsoo
            sxfiler.rpc sxfiler.rpc.jsoo)
 (preprocess (pps js_of_ocaml-ppx jsoo_reactjs.ppx)))
