(library
 (name sxfiler_renderer)
 (public_name sxfiler.renderer)
 (modes byte)
 (libraries js_of_ocaml
            js_of_ocaml-lwt
            js_of_ocaml.weak
            jsoo_reactjs
            jsoo_reactjs.transition_group
            jsonrpc-ocaml.jsoo
            lwt
            logs.browser
            sxfiler.core
            sxfiler.renderer.core
            sxfiler.renderer.usecase
            sxfiler.renderer.service.impl
            sxfiler.virtualized_list
            sxfiler.domain
            sxfiler.renderer.command
            sxfiler.rpc)
 (preprocess (pps lwt_ppx js_of_ocaml-ppx jsoo_reactjs.ppx)))
