(library
 (name sxfiler_server)
 (public_name sxfiler.server)
 (libraries lwt
            uuidm
            logs.lwt
            logs.fmt
            jsonrpc-ocaml.yojson
            sxfiler.domain
            sxfiler.usecase
            sxfiler.server.core
            sxfiler.server.task
            sxfiler.server.gateway
            sxfiler.server.infra)
 (preprocess (pps lwt_ppx)))
