(library
 (name sxfiler_server)
 (public_name sxfiler.server)
 (libraries lwt websocket websocket-lwt.cohttp
            uuidm
            logs.lwt
            logs.fmt
            jsonrpc-ocaml.yojson
            sxfiler.types.yojson
            sxfiler.rpc
            sxfiler.rpc.yojson
            sxfiler.server.completion
            sxfiler.server.core
            sxfiler.server.task
            ppx_deriving_yojson.runtime)
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))
