(library
 (name sxfiler_server)
 (public_name sxfiler.server)
 (libraries lwt websocket websocket-lwt.cohttp
            uuidm
            logs.lwt
            logs.fmt
            jsonrpc-ocaml.yojson
            sxfiler.domain
            sxfiler.rpc
            sxfiler.server.completion
            sxfiler.server.core
            sxfiler.server.task
            sxfiler.server.gateway
            sxfiler.server.presenter
            ppx_deriving_yojson.runtime)
 (preprocess (pps lwt_ppx ppx_deriving.std ppx_deriving_yojson)))
