(alias
 (name runtest)
 (deps tests.bc.js))

(library
 (name test_sxfiler_renderer_background)
 (libraries js_of_ocaml
  sxfiler.renderer.background
  jsoo_reactjs
  mocha_of_ocaml.async
  snap-shot-it_of_ocaml)
 (modules (:standard \ tests))
 (js_of_ocaml (flags ("--pretty" "--source-map-inline")))
 (preprocess (pps js_of_ocaml-ppx lwt_ppx)))

(executable
 (name tests)
 (modules tests)
 (libraries test_sxfiler_renderer_background)
 (js_of_ocaml (flags ("--pretty" "--source-map-inline"))))
