(alias
 (name runtest)
 (deps test_sxfiler_renderer_core.bc.js))

(executable
 (name test_sxfiler_renderer_core)
 (libraries js_of_ocaml sxfiler.renderer.core jsoo_reactjs mocha_of_ocaml snap-shot-it_of_ocaml)
 (js_of_ocaml (flags ("--pretty" "--source-map-inline")))
 (preprocess (pps js_of_ocaml-ppx)))
