(rule
 (targets test_sxfiler_renderer_translator.ml)
 (deps (:gen ../suite_gen/suite_gen.exe)
  (glob_files %{workspace_root}/*_test.ml))
 (action (run %{gen} -s _test -o %{targets})))

(alias
 (name runtest)
 (deps test_sxfiler_renderer_translator.bc.js))

(executable
 (name test_sxfiler_renderer_translator)
 (libraries js_of_ocaml sxfiler.renderer.translator mocha_of_ocaml)
 (js_of_ocaml (flags ("--pretty" "--source-map-inline")))
 (preprocess (pps js_of_ocaml-ppx)))
