(alias
 (name runtest)
 (deps tests.bc.js))

(library
 (name test_sxfiler_renderer_translator)
 (modes byte)
 (modules (:standard \ tests))
 (libraries js_of_ocaml sxfiler.renderer.translator mocha_of_ocaml)
 (preprocess (pps js_of_ocaml-ppx)))

(executable
 (name tests)
 (modules tests)
 (js_of_ocaml)
 (libraries test_sxfiler_renderer_translator))
