(alias
 (name runtest)
 (deps tests.bc.js))

(library
 (name test_sxfiler_renderer_usecase)
 (modules (:standard \ tests))
 (modes byte)
 (libraries js_of_ocaml sxfiler.renderer.usecase mocha_of_ocaml.async)
 (preprocess (pps js_of_ocaml-ppx lwt_ppx)))

(executable
 (name tests)
 (modules tests)
 (libraries test_sxfiler_renderer_usecase)
 (js_of_ocaml (flags ("--pretty" "--source-map-inline"))))
