(library
 (name sxfiler_renderer_background)
 (public_name sxfiler.renderer.background)
 (modes byte)
 (libraries js_of_ocaml
            sxfiler.core
            sxfiler.renderer.core
            sxfiler.renderer.service
            sxfiler.rpc
            sxfiler.renderer.store)
 (preprocess (pps lwt_ppx js_of_ocaml-ppx)))
