(library
 (name sxfiler_renderer_behavior)
 (public_name sxfiler.renderer.behavior)
 (modes byte)
 (libraries js_of_ocaml
            js_of_ocaml.weak
            jsoo_reactjs
            jsonrpc-ocaml.jsoo
            lwt
            sxfiler.core
            sxfiler.domain sxfiler.domain.jsoo
            sxfiler.renderer.core
            sxfiler.renderer.store)
 (preprocess (pps js_of_ocaml-ppx)))
