(alias
 (name gen)
 (deps sxfiler_renderer_command.ml))

(rule
 (targets sxfiler_renderer_command.ml)
 (deps (:discover gen/discover.exe))
 (action (run %{discover} -o %{targets})))

(library
 (name sxfiler_renderer_command)
 (public_name sxfiler.renderer.command)
 (modes byte)
 (libraries js_of_ocaml
            jsonrpc-ocaml.jsoo
            lwt
            sxfiler.core
            sxfiler.domain
            sxfiler.renderer.core
            sxfiler.renderer.store
            sxfiler.renderer.usecase))
