(alias
 (name gen)
 (deps (:f sxfiler_renderer_command.ml)
  (:discover gen/discover.exe))
 (action (run %{discover} -o %{f})))

(rule
 (targets sxfiler_renderer_command.ml)
 (deps (:discover gen/discover.exe)
  (glob_files %{workspace_root}/s_**.ml)
  (glob_files %{workspace_root}/d_**.ml))
 (action (run %{discover} -o %{targets})))

(library
 (name sxfiler_renderer_command)
 (public_name sxfiler.renderer.command)
 (modes byte)
 (libraries js_of_ocaml
            jsonrpc-ocaml.jsoo
            lwt
            sxfiler.core
            sxfiler.domain
            sxfiler.renderer.core
            sxfiler.renderer.store
            sxfiler.renderer.usecase
            sxfiler.renderer.service.impl))
