(alias
 (name gen)
 (deps (:generated sxfiler_renderer_command.ml.gen)
  (:original sxfiler_renderer_command.ml))
 (action (diff %{original} %{generated})))

(rule
 (targets sxfiler_renderer_command.ml.gen)
 (deps (:discover gen/discover.exe))
 (action (run %{discover} -o %{targets})))

(library
 (name sxfiler_renderer_command)
 (public_name sxfiler.renderer.command)
 (modes byte)
 (libraries js_of_ocaml
            jsonrpc-ocaml.jsoo
            lwt
            sxfiler.core
            sxfiler.domain
            sxfiler.renderer.core
            sxfiler.renderer.store
            sxfiler.renderer.usecase
            sxfiler.renderer.service.impl))
