(library
 (name sxfiler_renderer_core)
 (public_name sxfiler.renderer.core)
 (modes byte)
 (libraries js_of_ocaml
            js_of_ocaml.weak
            jsoo_reactjs
            lwt
            logs.browser
            jsonrpc-ocaml.jsoo
            ppx_deriving.runtime
            sxfiler.core
            sxfiler.rpc
            sxfiler.renderer.presenter
            sxfiler.domain)
 (preprocess (pps ppx_deriving.std js_of_ocaml-ppx)))
