(library
 (name sxfiler_renderer_core)
 (public_name sxfiler.renderer.core)
 (modes byte)
 (libraries js_of_ocaml
            js_of_ocaml.weak
            jsoo_reactjs
            lwt
            logs.browser
            jsonrpc-ocaml.jsoo
            sxfiler.core
            sxfiler.rpc
            sxfiler.renderer.translator
            sxfiler.domain)
 (preprocess (pps js_of_ocaml-ppx)))
