(library
 (name sxfiler_renderer_usecase)
 (public_name sxfiler.renderer.usecase)
 (modes byte)
 (libraries js_of_ocaml
            js_of_ocaml.weak
            js_of_ocaml-lwt
            jsoo_reactjs
            jsonrpc-ocaml.jsoo
            lwt
            sxfiler.core
            sxfiler.domain
            sxfiler.renderer.core
            sxfiler.renderer.service
            sxfiler.renderer.store)
 (preprocess (pps js_of_ocaml-ppx lwt_ppx)))
