(library
 (name sxfiler_server_gateway)
 (public_name sxfiler.server.gateway)
 (libraries sxfiler.domain
            sxfiler.usecase
            sxfiler.server.translator
            yojson
            ppx_deriving_yojson.runtime)
 (flags (:standard -w -3))
 (preprocess (pps lwt_ppx ppx_deriving_yojson ppx_variants_conv)))
