(library
 (name sxfiler_server_infra)
 (public_name sxfiler.server.infra)
 (libraries lwt
            sxfiler.core
            sxfiler.server.core
            sxfiler.server.task
            sxfiler.server.translator
            jsonrpc-ocaml.yojson
            ppx_protocol_conv_json
            migemocaml
            re
            unix)
 (preprocess (pps lwt_ppx ppx_deriving.std ppx_protocol_conv)))
